some change, add text,change icon

--- a/source/_posts/简单的树构建操作.md
+++ b/source/_posts/简单的树构建操作.md
@@ -25,24 +25,26 @@ tags:
 {id: 1, name: 'yet a menu', root: 0}
 {id: 2, name: 'menu x', root: 1}
 {id: 3, name: 'another', root: 0}
-{id: 4, name: 'some product'}
+{id: 4, name: 'some other product'}
 
 ```
 
-但是这里有个问题，每当代码中需要使用到某一确定id的帮助文档时，总是在树中进行深度优先查找，嵌套多层循环。反向查找其父级内容创建面包屑时，又是在节点列表中不断循环查找其id和当前节点父级id相同的节点，直到父级id属性为空。这种自找麻烦的情况在展示搜索帮助文档内容时达到峰值，页面需要一个新的缩小的树状结构用于展示搜索结果的分布情况并计数，代码中进行的判断和循环多达6次缩进。请注意，在学校教过树的搜索是深度优先和广度优先。但是，我们使用时千万不要轻易在树中搜索。我们需要的是捷径。
+但是这里有个问题，这段代码中每当需要使用到某一确定id的帮助文档时，总是在树中进行深度优先查找，嵌套多层循环。反向查找其父级内容创建面包屑时，又是在节点列表中不断循环查找其id和当前节点父级id相同的节点，直到父级id属性为空。这种自找麻烦的情况在展示搜索帮助文档内容时达到峰值，页面需要一个新的缩小的树状结构用于展示搜索结果的分布情况并计数，代码中进行的判断和循环多达6次缩进。请注意，在学校教过树的搜索是深度优先和广度优先。但是，我们使用时千万不要轻易在树中搜索。我们需要的是捷径。
 
 
 我们来看看我们对此数据结构的需求是什么样的：
-* 页面上有个树形的帮助文档索引 (所以我们需要一个树来描述这个节点关系)
-* 帮助目录只会有3层，短期内不会有其他更改 (确定这一点有助于避免过度设计)
-* 当显示某个确定的帮助文档时，需要展示面包屑导航栏 (所以我们需要一个能快速定位某id的能力，及快速追溯父级的能力)
-* 有搜索帮助的需求，展示时除了各元素的导航栏，还需要另行建立一个树用于展示各类型被搜索命中的数目
+* 页面上有个树形的帮助文档索引需要展示
+* 帮助目录只会有3层，短期内不会有其他更改
+* 当显示某个确定的帮助文档时，需要展示面包屑导航栏
+* 对帮助进行搜索，展示时树中仅显示被命中的项目，并对每个分类被搜索到的项目计数
 
+为了能实现这个简单的需求，我们需要一个有索引的树。
 
-首先，我们定义一个类，这个类的功能很简单，就是生成目录树，实例化完毕后，其`tree`属性就是一个描述树图的大字典，`id_index`属性则是一个id索引，另外，还在数据内部做了一点改动。如下：
+首先，我们定义一个类，这个类的功能很简单，就是生成目录树，实例化完毕后，其`tree`属性就是一个描述树图的大字典，`id_index`属性则是一个id索引，另外，还在数据内部添加了一点标记。如下：
+
 ```python
 self.tree = {
-    'root_id': {
+    'id_0': {
         ...   # root content
         menu_level: 0,
         children: {
@@ -52,13 +54,15 @@ self.tree = {
         }
     }
 self.id_index = {
-    'root_id': root_data,
-    'id_1': data_1,
+    'id_0': root_data,  # 即self.tree中root_
+    'id_1': data_1,  # 即self.tree中children下的dict对象
     'id_2': data_2,
     'id_3': data_3,
+    ...,
     }
 ```
 这里用到了python中对可变对象的名字引用，这样的数据结构有个好处，就是可以根据id快速定位到某个帮助页面，同时根据获得的这个字典对象在树形图中快速寻找其下级目录，或者根据其root属性再次在index中定位其父级页面。
+
 生成代码大致如下：
 
 ```python
@@ -86,13 +90,28 @@ class HelpMenuTree(object):
                     parent[node['id']] = tmp_id_index[node['id']] = node
                     node['menu_level'] = menu_level
                     node_list.remove(node)
-            self.id_index.update(tmp_id_index)
+            self.id_index.update(tmp_id_index)  # 循环完毕一层的节点之后，更新到id_index
             menu_level += 1
             if origin_len == len(node_list):
                 break      # 如果列表长度没变化，说明剩下的都是孤立节点，丢弃，或许可以打个日志
             origin_len = len(node_list)
+
 ```
 
-在这段代码中，我们
+在这段代码为我们生成一个足够简单好用的树，我们可以为其添加一些方便的方法，比如：
 
+```python
+    def make_bread(self, help_id):
+        """ 为help文档创建面包屑"""
+        if help_id not in self.id_index:
+            raise ValueError('...')
+        bread_list = []
+        target_id = help_id
+        while target_id:
+            target = self.id_index[target_id]
+            bread_list.append(target)
+            target_id = target.get('root')
+```
+
+从这段代码我们可以显而易见的发现索引的好处。
 
