--- a/source/_drafts/简单的树构建操作.md
+++ b/source/_drafts/简单的树构建操作.md
@@ -113,5 +113,37 @@ class HelpMenuTree(object):
             target_id = target.get('root')
 ```
 
-从这段代码我们可以显而易见的发现索引的好处。
+从这个例子，我们可以显而易见的发现索引的好处。同理可见于实践二。
 
+
+## 实践二
+
+我们产品后台的Django系统中历来权限控制极为混乱，权限散落于各个页面，书写的权限与具体功能无法一一对应，亟待解决。经历某些事件，痛定思痛之后，决定重新创建一套权限系统。
+
+首先，研究Django系统的特性之后，决定直接利用框架URL路由系统来作为权限系统的根基。先整理URL命名以吻合整个后台的页面层级，然后以路由树直接复刻出整个网站地图，从而可以通过这个树直观感受整个后台。我们在此创建出两个类，节点类及网络类，用以控制这整个树结构。创建树的逻辑很简单：
+
+
+```python
+class NodeNetwork(object):
+
+    def __init__(self, router_dict):
+        self.root_node = RouterNode('', root_node=True)
+        self.__path_map = {}
+        self.__build_network_by_dict(self.root_node, router_dict)
+        self.__point_map = {
+            node.node_value: node for node in self.__path_map.values()
+        }
+
+     def __build_network_by_dict(self, root, router_dict):
+         for key, value in router_dict.items():
+             try:
+                 new_node = RouterNode(key, parent=root)
+             except IgnoredPermission:
+                 continue
+             if isinstance(value, dict):
+                 self.__build_network_by_dict(new_node, value)
+             elif isinstance(value, basestring):
+                 new_node.become_leaf(value)
+             self.__path_map[new_node.full_path] = new_node
+
+```
